# docker/swagger/v1/doc.yaml
@@ -170,12 +170,12 @@ paths:
                     type: string
                     description: Message associated with the response
                     example: Invalid request
-  /conversations/ChangeContext:
+  /conversations/SwitchContext:
     post:
       tags:
         - Conversations
-      summary: Change a context of conversation
-      operationId: changecontextConversation
+      summary: Switch a context of conversation
+      operationId: switchcontextConversation
       requestBody:
         required: true
         content:
@@ -185,7 +185,7 @@ paths:
               properties:
                 ConversationId:
                   type: string
-                  description: The ID of the conversation where I want to change the context.
+                  description: The ID of the conversation where I want to switch the context.
                   example: con_66b49782713ab
                 ContextId:
                   type: string
@@ -360,6 +360,81 @@ paths:
                         description: The ID of the context
                         example: cot_664c50f9c95cb
                     description: Data returned by the publication service
+                
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    description: Indicates whether the conversation was created
+                    example: false
+                  statusCode:
+                    type: integer
+                    description: HTTP status code of the response
+                    example: 400
+                  data:
+                    type: object
+                    description: Data returned by the conversation service
+                  message:
+                    type: string
+                    description: Message associated with the response
+                    example: Invalid request
+
+  /context/Edit:
+    post:
+      tags:
+          - Context
+      summary: Edit a context
+      operationId: editContext
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                Id:
+                  type: string
+                  description: The context you want to edit.
+                  example: cot_66b46fefe29d5
+                NewMessage:
+                  type: string
+                  description: The new context message.
+                  example: context
+                
+
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    description: indicate whether the context was created
+                    example: true
+                  statusCode:
+                    type: integer
+                    description: HTTP status code of the response
+                    example: 200
+                  data:
+                    type: object
+                    properties:
+                      Id:
+                        type: string
+                        description: The ID of the context
+                        example: cot_664c50f9c95cb
+                      context:
+                        type: string
+                        description: The new message context
+                        example: cot_664c50f9c95cb
+                    description: Data returned by the context service
                 
         '400':
           description: Bad request
