# src/Application/Service/SwitchContextConversation/SwitchContextConversationRequest.php
@@ -1,11 +1,11 @@
 <?php
 
-namespace Chatbot\Application\Service\ChangeContextConversation;
+namespace Chatbot\Application\Service\SwitchContextConversation;
 
 use Chatbot\Domain\Model\Context\ContextId;
 use Chatbot\Domain\Model\Conversation\ConversationId;
 
-class ChangeContextConversationRequest{public function __construct(
+class SwitchContextConversationRequest{public function __construct(
     public readonly ContextId $contextId,
     public readonly ConversationId $conversation,
     ) {
