# src/Application/Service/SwitchContextConversation/SwitchContextConversationResponse.php
@@ -1,12 +1,12 @@
 <?php
 
-namespace Chatbot\Application\Service\ChangeContextConversation;
+namespace Chatbot\Application\Service\SwitchContextConversation;
 
 use Chatbot\Domain\Model\Context\ContextId;
 use Chatbot\Domain\Model\Context\ContextMessage;
 use Chatbot\Domain\Model\Conversation\ConversationId;
 
-class ChangeContextConversationResponse
+class SwitchContextConversationResponse
 {
     public function __construct(
         public readonly ContextId $contextId,
